# ad-apps

./: .envrc  .gitignore  README.md  apps.yaml  info.py  pyproject.toml  radiator.py  renovate.json5  toggle.py
.github/workflows/: quality-check.yaml
basic/: apps.yaml  radiator.py
bindings/: radiator.py  toggle.py
network/: unifi.py
sensors/: info.py  power.py  watchdog.py
util/: apps.yaml  base.py
