[tool.poetry]
name = "appdaemon-apps"
version = "0.1.0"
description = ""
authors = ["Mike Pagel <mike@mpagel.de>"]
# readme = "README.md"
# packages = [{include = "appdaemon_apps"}]

[tool.poetry.dependencies]
python = "^3.10"
appdaemon = "4.4.2"

[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
pylint = "^2.15.10"
isort = "^5.11.4"
mypy = "^0.991"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
skip-string-normalization = true
