[tool.poetry]
name = "appdaemon-apps"
version = "0.1.0"
description = ""
authors = ["Mike Pagel <mike@mpagel.de>"]
# readme = "README.md"
# packages = [{include = "appdaemon_apps"}]

[tool.poetry.dependencies]
python = "^3.11"
appdaemon = "4.4.2"

[tool.poetry.group.dev.dependencies]
pylint = "^3.0.2"
isort = "^5.12.0"
mypy = "^1.7.0"
ruff = "^0.1.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
